tests/spec/emit/snapshots/loop_expression_shadow_same_name_binding.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nfn test() -> int {\n  let x = loop {\n    let x = 1\n    break x\n  }\n  x\n}\n"
---
package main

func test() int {
	var x_1 int
	for {
		x_1 = 1
		break
	}
	return x_1
}
