tests/spec/emit/snapshots/loop_variable_named_like_bound_temp_no_collision.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn make_bound() -> int { 3 }
  
  fn main() {
    let mut sum = 0;
    for bound_1 in 0..=make_bound() {
      sum = sum + bound_1;
    }
    let _ = sum;
  }
---
package main

func makeBound() int {
	return 3
}

func main() {
	sum := 0
	bound := makeBound()
	for bound_1 := 0; bound_1 <= bound; bound_1++ {
		sum += bound_1
	}
	_ = sum
}
