tests/spec/emit/snapshots/loop_variable_named_like_range_temp_no_collision.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn make_range() -> Range<int> { 0..3 }
  
  fn main() {
    let mut sum = 0;
    for range_1 in make_range() {
      sum = sum + range_1;
    }
    let _ = sum;
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func makeRange() lisette.Range[int] {
	return lisette.Range[int]{
		Start: 0,
		End:   3,
	}
}

func main() {
	sum := 0
	range_2 := makeRange()
	for range_1 := range_2.Start; range_1 < range_2.End; range_1++ {
		sum += range_1
	}
	_ = sum
}
