tests/spec/emit/snapshots/loop_with_break.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() {
    loop {
      break;
    }
  }
---
package main

func test() {
	for {
		break
	}
}
