tests/spec/emit/snapshots/loop_with_continue.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(items: Slice<int>) -> int {
    let mut sum = 0;
    for item in items {
      if item < 0 {
        continue;
      };
      sum = sum + item;
    };
    sum
  }
---
package main

func test(items []int) int {
	sum := 0
	for _, item := range items {
		if item < 0 {
			continue
		}
		sum += item
	}
	return sum
}
