tests/spec/emit/snapshots/lvalue_capturing_tuple_field.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn make_i() -> int {
    fmt.Println("i")
    0
  }
  
  fn main() {
    let mut items = [(0, 0)]
    items[make_i()].0 = if true { 1 } else { 2 }
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func makeI() int {
	fmt.Println("i")
	return 0
}

func main() {
	items := []lisette.Tuple2[int, int]{lisette.MakeTuple2[int, int](0, 0)}
	base := items
	idx := makeI()
	var tmp int
	if true {
		tmp = 1
	} else {
		tmp = 2
	}
	base[idx].First = tmp
}
