tests/spec/emit/snapshots/map_alias_propagates_comparable_to_enum_variant.snap
---
source: tests/spec/emit/types.rs
description: "input: \ntype Table<T> = Map<T, int>\n\nenum Holder<T> {\n  Some(Table<T>),\n}\n\nfn main() {\n  let h = Holder.Some(Map.new<string, int>())\n  let _ = h\n}\n"
---
package main

import "fmt"

func MakeHolderSome[T comparable](arg0 Table[T]) Holder[T] {
	return Holder[T]{Tag: HolderSome, Some: arg0}
}

type Table[T comparable] = map[T]int

type HolderTag int

const (
	HolderSome HolderTag = iota
)

type Holder[T comparable] struct {
	Tag  HolderTag
	Some Table[T]
}

func (h Holder[T]) String() string {
	switch h.Tag {
	case HolderSome:
		return fmt.Sprintf("Holder.Some(%v)", h.Some)
	default:
		return fmt.Sprintf("Holder(%d)", h.Tag)
	}
}

func main() {
	h := MakeHolderSome(make(map[string]int))
	_ = h
}
