tests/spec/emit/snapshots/map_alias_propagates_comparable_to_struct_field_use.snap
---
source: tests/spec/emit/types.rs
description: |
  
  type Table<T> = Map<T, int>
  
  struct Box<T> {
    table: Table<T>,
  }
  
  fn main() {
    let b = Box { table: Map.new<string, int>() }
    let _ = b
  }
---
package main

type Table[T comparable] = map[T]int

type Box[T comparable] struct {
	table Table[T]
}

func main() {
	b := Box[string]{table: make(map[string]int)}
	_ = b
}
